--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Personal Projects</title>
+    <title>Lucas Represa - Personal Projects</title>
     <style>
         /* Add some basic styling here */
         body {
@@ -67,6 +67,11 @@
                 <li>Four robot sizes: babySize (42.0 cm), dogSize (89.0 cm), childSize (120.0 cm), and adultSize (170.0 cm)</li>
             </ul>
             <p>This dataset provides a comprehensive resource for training and evaluating emotion recognition models in human-robot interaction scenarios.</p>
+
+            <figure>
+                <img src="images/metahumanafterall.png" alt="MetaHumanAfterAll Dataset Sample">
+                <figcaption>Figure: Sample images from the MetaHumanAfterAll dataset, showcasing diverse synthetic humans and emotions</figcaption>
+            </figure>
 
             <h3>Study Overview</h3>
             <p>Using the MetaHumanAfterAll dataset, we investigated how robot physical characteristics affect the quality of social cue estimation in human-robot interactions. We analyzed the effects of robot size, angle, and distance on emotion detection accuracy.</p>
