--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>Personal Project Showcase</p>
+        <h1>Lucas Represa</h1>
+        <p>Unreal-HRI</p>
     </header>
 
     <main>
         <section class="project">
-            <h2>Impact of Robot's Physical Characteristics on Social Cues Estimate Quality</h2>
+            <h2>Optimizing Emotion Recognition in Social Robots: The Role of Robot's Physical Characteristics</h2>
             
             <h3>Project Origin</h3>
             <p>This project was born from the observation that traditional computer vision face algorithms, such as Haar Cascade, often fail when applied to small robots. The unique perspectives and limitations of these robots create challenges in accurately detecting and interpreting human facial expressions.</p>
