--- a/index.html
+++ b/index.html
@@ -51,12 +51,9 @@
     <main>
         <section class="project">
             <h2>Optimizing Emotion Recognition in Social Robots: The Role of Physical Characteristics</h2>
-            
-            <!-- <div class="image-container">
-                <img src="images/metahuman_fusion.png" alt="MetaHuman Fusion">
-                <img src="images/robot_sizes.png" alt="Robot Sizes">
-            </div>
-            <p>Left: Diversity of human faces created using MetaHuman technology. Right: Various sizes of robots considered in this study.</p> -->
+
+            <h3>Abstract</h3>
+            <p>This study explores emotion recognition challenges in social robotics, focusing on how robot characteristics and human attributes affect estimation accuracy. It introduces a novel methodology using 3D technologies to generate synthetic datasets simulating diverse human-robot interactions. The research investigates the impact of robot physical properties (yaw angles, distances, sizes) on emotion estimation and examines potential biases from human attributes (age, gender, race). By analyzing these factors' interplay, the study aims to enhance emotion recognition systems' reliability and fairness, improve benchmarks, and guide future training efforts, ultimately contributing to the development of more intuitive and responsive social robots.</p>
 
             <h3>Project Origin</h3>
             <p>This project was born from the observation that traditional computer vision face algorithms, such as Haar Cascade, often fail when applied to small robots. The unique perspectives and limitations of these robots create challenges in accurately detecting and interpreting human facial expressions.</p>
