--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 Lucas Represa. All rights reserved.</p>
+        <p>Project conducted under the supervision of <a href="https://www.epfl.ch/labs/cvlab/" target="_blank">Pr. Salzmann (EPFL, CVLAB)</a> and <a href="https://www.enchantedtools.ai/" target="_blank">Dr. Thomas Janssoone (Enchanted Tools)</a>.</p>
     </footer>
 </body>
 </html>
