--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <footer>
         <p>&copy; 2024 Lucas Represa. All rights reserved.</p>
-        <p>Project conducted under the supervision of <a href="https://www.epfl.ch/labs/cvlab/" target="_blank">Pr. Salzmann (EPFL, CVLAB)</a> and <a href="https://www.enchantedtools.ai/" target="_blank">Dr. Thomas Janssoone (Enchanted Tools)</a>.</p>
+        <p>Project conducted under the supervision of Pr. Salzmann <a href="https://www.epfl.ch/labs/cvlab/" target="_blank">(EPFL, CVLAB)</a> and Dr. Thomas Janssoone <a href="https://enchanted.tools" target="_blank">(Enchanted Tools)</a>.</p>
     </footer>
 </body>
 </html>
