--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 </head>
 <body>
     <header>
-        <h1>Lucas Represa</h1>
-        <p>Unreal-HRI</p>
+        <h1>Unreal-HRI</h1>
+        <p>Lucas Represa</p>
     </header>
 
     <main>
