--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <p>Lucas Represa</p>
     </header>
 
+    <button id="dark-mode-toggle">Dark Mode</button>
+
     <nav id="table-of-contents">
         <h2>Table of Contents</h2>
         <ul>
