--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <h2>Table of Contents</h2>
         <ul>
             <li><a href="#introduction">Introduction</a></li>
-            <li><a href="#methodology">Methodology</a></li>
+            <li><a href="#methodology">Dataset</a></li>
             <li><a href="#results">Results</a></li>
         </ul>
     </nav>
 
     <main>
         <section class="project">
-            <h2>Optimizing Emotion Recognition in Social Robots: The Role of Physical Characteristics</h2>
+            <h2 id="introduction">Optimizing Emotion Recognition in Social Robots: The Role of Physical Characteristics</h2>
 
-            <h3 id="introduction">Abstract</h3>
+            <h3>Abstract</h3>
             <p>This study explores emotion recognition challenges in social robotics, focusing on how robot characteristics and human attributes affect estimation accuracy. It introduces a novel methodology using 3D technologies to generate synthetic datasets simulating diverse human-robot interactions. The research investigates the impact of robot physical properties (yaw angles, distances, sizes) on emotion estimation and examines potential biases from human attributes (age, gender, race). By analyzing these factors' interplay, the study aims to enhance emotion recognition systems' reliability and fairness, improve benchmarks, and guide future training efforts, ultimately contributing to the development of more intuitive and responsive social robots.</p>
 
             <h3>Project Origin</h3>
