--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </figure>
 
             <h3>Study Overview</h3>
-            <p>Using the MetaHumanAfterAll dataset, we investigated how robot physical characteristics affect the quality of social cue estimation in human-robot interactions. We analyzed the effects of robot size, angle, and distance on emotion detection accuracy.</p>
+            <p>Using the MetaHumanAfterAll dataset, we investigated how robot physical characteristics affect the quality of social cue estimation in human-robot interactions. We employed DDAMFn[1], a state-of-the-art emotion estimation model, to analyze the effects of robot size, angle, and distance on emotion detection accuracy. The model's performance was evaluated by comparing its predictions to the true labels in our dataset.</p>
             
             <h3 id="results">Key Findings:</h3>
             <ul>
@@ -83,7 +83,10 @@
             <p>This study provides valuable insights for the design and deployment of social robots, emphasizing the need to consider physical characteristics in optimizing emotion detection capabilities.</p>
         </section>
 
-        <!-- Add more project sections as needed -->
+        <h3>References</h3>
+        <ol>
+            <li id="ref1">Saining Zhang et al. "A Dual-Direction Attention Mixed Feature Network for Facial Expression Recognition". In: Electronics 12.17 (2023). issn: 2079-9292. doi: 10.3390/electronics12173595. url: <a href="https://www.mdpi.com/2079-9292/12/17/3595" target="_blank">https://www.mdpi.com/2079-9292/12/17/3595</a>.</li>
+        </ol>
     </main>
 
     <footer>
