--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img src="images/metahuman_fusion.png" alt="MetaHuman Fusion">
                 <img src="images/robot_sizes.png" alt="Robot Sizes">
             </div>
-            <p>The images above illustrate the concept: on the left, we see the diversity of human faces created using MetaHuman technology, and on the right, the various sizes of robots considered in this study.</p>
+            <p>The images above illustrate the concept: on the left, we see the diversity of human faces created using MetaHuman technology [1], and on the right, the various sizes of robots considered in this study.</p>
 
             <h3 id="methodology">The MetaHumanAfterAll Dataset</h3>
             <p>To address the limitations of existing datasets and better understand the challenges faced by robots of different sizes, we created the "MetaHumanAfterAll" dataset. This synthetic dataset comprises approximately 14,000 images of diverse virtual humans displaying seven basic emotions. Key features include:</p>
@@ -55,7 +55,7 @@
             </figure>
 
             <h3>Study Overview</h3>
-            <p>Using the MetaHumanAfterAll dataset, we investigated how robot physical characteristics affect the quality of social cue estimation in human-robot interactions. We employed DDAMFn[1], a state-of-the-art emotion estimation model, to analyze the effects of robot size, angle, and distance on emotion detection accuracy. The model's performance was evaluated by comparing its predictions to the true labels in our dataset.</p>
+            <p>Using the MetaHumanAfterAll dataset, we investigated how robot physical characteristics affect the quality of social cue estimation in human-robot interactions. We employed DDAMFN [2], a state-of-the-art emotion estimation model, to analyze the effects of robot size, angle, and distance on emotion detection accuracy. The model's performance was evaluated by comparing its predictions to the true labels in our dataset.</p>
             
             <h3 id="results">Key Findings:</h3>
             <ul>
@@ -85,7 +85,8 @@
 
         <h3>References</h3>
         <ol>
-            <li id="ref1">Saining Zhang et al. "A Dual-Direction Attention Mixed Feature Network for Facial Expression Recognition". In: Electronics 12.17 (2023). issn: 2079-9292. doi: 10.3390/electronics12173595. url: <a href="https://www.mdpi.com/2079-9292/12/17/3595" target="_blank">https://www.mdpi.com/2079-9292/12/17/3595</a>.</li>
+            <li id="ref1">Epic Games. MetaHuman Creator. Accessed: 2024-08-26. 2024. url: <a href="https://metahuman.unrealengine.com/mhc" target="_blank">https://metahuman.unrealengine.com/mhc</a>.</li>
+            <li id="ref2">Saining Zhang et al. "A Dual-Direction Attention Mixed Feature Network for Facial Expression Recognition". In: Electronics 12.17 (2023). issn: 2079-9292. doi: 10.3390/electronics12173595. url: <a href="https://www.mdpi.com/2079-9292/12/17/3595" target="_blank">https://www.mdpi.com/2079-9292/12/17/3595</a>.</li>
         </ol>
     </main>
 
