Fix table of contents dark mode

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <p>This project was born from the observation that traditional computer vision face algorithms, such as Haar Cascade, often fail when applied to small robots. The unique perspectives and limitations of these robots create challenges in accurately detecting and interpreting human facial expressions.</p>
             
             <div class="image-container">
-                <img src="images/metahuman_fusion.png" alt="MetaHuman Fusion">
-                <img src="images/robot_sizes.png" alt="Robot Sizes">
+                <img src="images/metahuman_fusion.png" alt="MetaHuman Fusion" class="responsive-image">>
+                <img src="images/robot_sizes.png" alt="Robot Sizes" class="responsive-image">>
             </div>
             <p>The images above illustrate the concept: on the left, we see the diversity of human faces created using MetaHuman technology [1], and on the right, the various sizes of robots considered in this study.</p>
 
