Update table of contents

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="#introduction">Introduction</a></li>
             <li><a href="#methodology">Dataset</a></li>
             <li><a href="#results">Results</a></li>
+            <li><a href="#references">References</a></li>
         </ul>
     </nav>
 
@@ -83,12 +84,15 @@
             <p>This study provides valuable insights for the design and deployment of social robots, emphasizing the need to consider physical characteristics in optimizing emotion detection capabilities.</p>
         </section>
 
-        <h3>References</h3>
+        <h3 id="references">References</h3>
         <ol>
             <li id="ref1">Epic Games. MetaHuman Creator. Accessed: 2024-08-26. 2024. url: <a href="https://metahuman.unrealengine.com/mhc" target="_blank">https://metahuman.unrealengine.com/mhc</a>.</li>
             <li id="ref2">Saining Zhang et al. "A Dual-Direction Attention Mixed Feature Network for Facial Expression Recognition". In: Electronics 12.17 (2023). issn: 2079-9292. doi: 10.3390/electronics12173595. url: <a href="https://www.mdpi.com/2079-9292/12/17/3595" target="_blank">https://www.mdpi.com/2079-9292/12/17/3595</a>.</li>
         </ol>
     </main>
+
+    <!-- Spacer -->
+    <div class="spacer"></div>
 
     <footer>
         <p>&copy; 2024 Lucas Represa. All rights reserved.</p>
