--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
         </ol>
     </main>
 
-    <!-- Spacer -->
-    <div class="spacer"></div>
+    <div style="height: 50px;"></div>
 
     <footer>
         <p>&copy; 2024 Lucas Represa. All rights reserved.</p>
